Replace deprecated methods / Fix warnings